--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
-    "build": "tsc",
+    "build": "rm -R -f lib && tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -14,10 +14,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@shardedcards/sc-types": "^0.4.4",
+    "cors": "^2.8.5",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
