--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "outDir": "lib",
     "sourceMap": true,
-    "strict": true,
+    "module": "commonjs",
+    "outDir": "lib",
     "target": "es2017"
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "exclude": ["**/*.spec.ts", "**/*.test.ts", "./node_modules"],
+  "include": ["./src/**/*.ts"]
 }
