--- a/functions/package.json
+++ b/functions/package.json
@@ -6,6 +6,8 @@
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -21,6 +23,11 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
+    "@types/jest": "^24.0.18",
+    "firebase-functions-test": "^0.1.7",
+    "jest": "^24.9.0",
+    "sinon": "^7.5.0",
+    "ts-jest": "^24.1.0",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
