--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "module": "commonjs",
     "outDir": "lib",
-    "target": "es2017"
+    "target": "es2017",
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "compileOnSave": true,
   "exclude": ["**/*.spec.ts", "**/*.test.ts", "./node_modules"],
